--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -11,3 +11,10 @@
 
 - Zend Framework Version: 1.11.7
 - State of Zend_Service_Chargify: Unofficial
+
+0.3-beta, 2012-02-20
+--------------------
+- Added better error checking when reactivating a subscription.
+
+- Zend Framework Version: 1.11.7
+- State of Zend_Service_Chargify: Unofficial
