--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -18,3 +18,10 @@
 
 - Zend Framework Version: 1.11.7
 - State of Zend_Service_Chargify: Unofficial
+
+0.4-beta, 2012-03-21
+--------------------
+- Fixed bug where query params were not properly set on POST or PUT requests.
+
+- Zend Framework Version: 1.11.7
+- State of Zend_Service_Chargify: Unofficial
